src/test/ui/closures/2229_closure_analysis/path-with-array-access.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/path-with-array-access.rs:23:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/path-with-array-access.rs:1:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

error: Capturing pent[(0, 0)] -> ImmBorrow
  --> $DIR/path-with-array-access.rs:26:24
   |
LL |         println!("{}", pent.points[5].x);
   |                        ^^^^^^^^^^^

error: Min Capture pent[(0, 0)] -> ImmBorrow
  --> $DIR/path-with-array-access.rs:26:24
   |
LL |         println!("{}", pent.points[5].x);
   |                        ^^^^^^^^^^^

error: aborting due to 3 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0658`.
